# haltmarket

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
apps/monitor/: Dockerfile  README.md  pyproject.toml
apps/monitor/src/haltmarket_monitor/: __init__.py  classify.py  config.py  db.py  feed.py  main.py  metrics.py  poller.py  polygon.py
apps/monitor/tests/: conftest.py  test_classify.py  test_db_integration.py  test_feed.py  test_poller.py  test_smoke.py
apps/monitor/tests/fixtures/: halts_rss.xml
apps/resolver/: README.md  pyproject.toml
apps/resolver/src/haltmarket_resolver/: __init__.py  main.py
apps/resolver/tests/: test_smoke.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/e2e/: core-flow.spec.ts
apps/web/public/: manifest.webmanifest
apps/web/src/app/: home.test.ts  layout.tsx  page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/auth/sign-out/: route.ts
apps/web/src/app/history/: page.tsx
apps/web/src/app/leaderboard/: page.tsx
apps/web/src/app/market/[id]/: page.tsx
apps/web/src/app/sign-in/: page.tsx  sign-in-form.tsx
apps/web/src/app/wallet/: page.tsx
apps/web/src/components/: bet-form.tsx  bin-ladder.tsx  countdown.tsx  ladder-disclosure.tsx  market-card.tsx  market-pool-live.tsx  resolution-breakdown.tsx  site-nav.tsx  wallet-balance.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx
apps/web/src/lib/: bins.test.ts  bins.ts  env.ts  format.ts  session.ts
apps/web/src/lib/mocks/: fixtures.ts  realtime.ts  types.ts
apps/web/src/lib/supabase/: browser.ts  server.ts
docs/: design.md  human-tasks.md  ledger.md  progress.md  runbook-drift.md
docs/adrs/: ADR-0001-ledger-subsystem.md  ADR-0002-closest-to-pin-bonus.md
infra/github-actions/: README.md
scripts/: ledger-integration-setup.sql  ledger-integration.sh
supabase/: README.md  config.toml
supabase/functions/check-ledger-invariants/: index.ts
supabase/functions/lock-due-markets/: index.ts
supabase/migrations/: 0001_ledger.sql  0002_halts.sql  0003_markets.sql
