[project]
name = "haltmarket-resolver"
version = "0.0.0"
description = "Polls Polygon for post-halt opening-cross prints and settles haltmarket markets."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [{ name = "haltmarket" }]
dependencies = [
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.3",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.scripts]
haltmarket-resolver = "haltmarket_resolver.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haltmarket_resolver"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["haltmarket_resolver"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
